@@ -1,7 +1,7 @@
 /***************************************************************************
  *          GModelSpatialDiffuseMap.hpp - Spatial map model class          *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2012-2013 by Juergen Knoedlseder                         *
+ *  copyright (C) 2012-2014 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -51,10 +51,12 @@ public:
     // Constructors and destructors
     GModelSpatialDiffuseMap(void);
     explicit GModelSpatialDiffuseMap(const GXmlElement& xml);
-    explicit GModelSpatialDiffuseMap(const std::string& filename,
-                                     const double&      value = 1.0);
-    explicit GModelSpatialDiffuseMap(const GSkymap& map,
-                                     const double&  value = 1.0);
+    GModelSpatialDiffuseMap(const std::string& filename,
+                            const double&      value = 1.0,
+                            const bool&        normalize = true);
+    GModelSpatialDiffuseMap(const GSkymap& map,
+                            const double&  value = 1.0,
+                            const bool&    normalize = true);
     GModelSpatialDiffuseMap(const GModelSpatialDiffuseMap& model);
     virtual ~GModelSpatialDiffuseMap(void);
 
@@ -81,6 +83,7 @@ public:
     void               load(const std::string& filename);
     const GSkymap&     map(void) const;
     void               map(const GSkymap& map);
+    bool               normalize(void) const;
 
 protected:
     // Protected methods
@@ -90,10 +93,11 @@ protected:
     void prepare_map(void);
 
     // Protected members
-    GModelPar           m_value;        //!< Value
-    GSkymap             m_map;          //!< Skymap
-    std::string         m_filename;     //!< Name of skymap
-    std::vector<double> m_mc_cache;     //!< Monte Carlo cache
+    GModelPar           m_value;      //!< Value
+    GSkymap             m_map;        //!< Skymap
+    std::string         m_filename;   //!< Name of skymap
+    std::vector<double> m_mc_cache;   //!< Monte Carlo cache
+    bool                m_normalize;  //!< Normalize map (default: true)
 };
 
 /***********************************************************************//**
@@ -180,6 +184,20 @@ void GModelSpatialDiffuseMap::map(const GSkymap& map)
     m_map = map;
     prepare_map();
     return;
+}
+
+
+/***********************************************************************//**
+ * @brief Return normalization flag
+ *
+ * @return True is the map has been normalized, false otherwise.
+ *
+ * Signals whether a map has been normalized or not.
+ ***************************************************************************/
+inline
+bool GModelSpatialDiffuseMap::normalize(void) const
+{
+    return (m_normalize);
 }
 
 #endif /* GMODELSPATIALDIFFUSEMAP_HPP */
